# mint

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  STATUS.md  compile-all.sh  issues.jsonl  manifest  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sbj3jncauoctr1ogksflcnubl0mmkk8a.darc  test-canonical.sh  test-eq.mint  test-list-ops.mint  test-search.mint
.beads/: issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
.claude/agents/: technical-writer.md
.codex/: hooks.json
.github/workflows/: ci.yml  release.yml  website.yml
compiler/src/: cli.ts
docs/: CANONICAL_FORMS.md  FFI.md  STDLIB.md  TESTING.md  TESTING_JSON_SCHEMA.md  mutability.md  type-system.md
examples/todo-react/: README.md  package.json  tsconfig.json
language/: AGENTS.md  BIDIRECTIONAL_MIGRATION_COMPLETE.md  CLAUDE.md  GETTING_STARTED.md  LOOPHOLE_FOUND.md  README.md  STATUS.md  test-canonical.sh
language/benchmarks/: README.md  RESULTS.md  run-all.sh
language/compiler/crates/sigil-typechecker/: Cargo.toml
language/compiler/crates/sigil-typechecker/src/: bidirectional.rs  coverage.rs  effects.rs  environment.rs  errors.rs  lib.rs  proof_context.rs  typed_ir.rs  types.rs
language/compiler/crates/sigil-typechecker/tests/: errors.rs  pipeline.rs  protocol_state.rs
language/compiler/crates/sigil-validator/: Cargo.toml
language/compiler/crates/sigil-validator/src/: branching_recursion.rs  canonical.rs  error.rs  printer.rs
language/compiler/crates/sigil-validator/tests/: comprehensive.rs
projects/: AGENTS.md
src/: 99-bottles.mint.map  binary_search.mint  palindrome.mint
stdlib/: list_predicates.mint
tests/: 99-bottles.mint  rot13-encoder.mint  todo-domain.mint
tools/: checkBundledNodeRuntime.sh  checkHomebrewFormula.sh
website/: README.md
(+939 files in other folders)
