[package]
name = "sigil-typechecker"
version = "0.1.0"
edition = "2021"

[dependencies]
sigil-ast = { path = "../sigil-ast" }
sigil-lexer = { path = "../sigil-lexer" }
sigil-diagnostics = { path = "../sigil-diagnostics" }
sigil-solver = { path = "../sigil-solver" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sigil-parser = { path = "../sigil-parser" }
