[package]
name = "sigil-validator"
version = "0.1.0"
edition = "2021"
authors = ["Sigil Language Team"]
description = "Validator for canonical form rules in Sigil"
license = "MIT"

[features]
default = ["vendored-z3"]
vendored-z3 = ["sigil-typechecker/vendored-z3"]

[dependencies]
sigil-ast = { path = "../sigil-ast" }
sigil-lexer = { path = "../sigil-lexer" }
sigil-diagnostics = { path = "../sigil-diagnostics" }
sigil-typechecker = { path = "../sigil-typechecker", default-features = false }
thiserror = { workspace = true }

[dev-dependencies]
sigil-parser = { path = "../sigil-parser" }
